overlay.d/15-microshift/usr/lib/microshift/manifests.d/40-argocd/base/route.openshift.io/routes/console/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
  annotations:
    cert-manager.io/issuer-name: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
